Fixed issue with challenge width on small devices

--- a/src/scss/iconcaptcha.scss
+++ b/src/scss/iconcaptcha.scss
@@ -139,7 +139,6 @@ $dark-theme-init-body-title-color: #DADADA;
             overflow: hidden;
             position: relative;
             height: 50px;
-            min-height: 50px;
             padding: $captcha-body-padding;
             text-align: center;
             -webkit-box-align: center;
